# coord2d

./: .exrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rules.md
.github/: FUNDING.yml
.github/workflows/: lint.yml  rust.yml  shiftleft-analysis.yml
src/: coord.rs  coords.rs  debug.rs  lib.rs  lines.rs  new.rs  points.rs  vector.rs  vectors.rs
src/tests/: coord.rs  mod.rs  vector.rs
