[package]
name = "coord2d"
version = "0.2.3"
authors = ["abdellatif-dev <abdellatif.devlog@gmail.com>"]
description="rust lib for coordinate in 2d system"
license-file = "LICENSE"
keywords = ["coord2d", "coord", "vector"]
repository = "https://github.com/abdellatif-dev/coord2d"
readme = "README.md"
exclude = [".github/*", "CODE_OF_CONDUCT.md", "SECURITY.md", "CONTRIBUTING.md"]
documentation = "https://docs.rs/coord2d/0.2.3/coord2d/"
edition = "2018"

[badges]


[dependencies]
